# ninurta_bank.sh

./: .gitignore  AndroidManifest.xml  CMakeLists.txt  LICENSE  MainActivity.java  NativeMiner.java  README.md  TERNARY-CALCULATOR-V2  activity_main.xml  build.gradle  check_balance.sh  colors.xml  docker-compose.yml  egg_miner.cpp  igigi_transporter.sh  index.html  marduk_atm.sh  marduk_bridge.sh  marduk_engine.sh  marduk_rig.sh  marduk_vault.html  marduk_watchdog.sh  miner_engine.cpp  native_miner.cpp  ninurta_atm_rig.sh  ninurta_bank.sh  phone_miner.sh  quantum_slicer.sh  real_miner.cpp  setup_mining.sh  setup_wallet.sh  xmrig_config.json  📜 License
